--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,1 +1,14 @@
-@import '~src/styles/global';
+@import '../../../styles/_global.css';
+
+h2 {
+  margin-top: 0;
+}
+
+.ng-invalid:not(form).ng-dirty {
+  border: 1px solid #d63532;
+}
+
+.alert {
+  color: #d63532;
+  margin-bottom: 0;
+}
