--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,57 +1,4 @@
 <div class="container-fluid">
-  <div class="well">
-    <div class="row">
-      <div class="col-md-12">
-        <h2>Enter a zipcode:</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">
-        <input
-          class="form-control"
-          [formControl]="zipCodeControl"
-          placeholder="Zipcode"
-          type="text"
-          id="addLocation"
-          minlength="5"
-          maxlength="5"
-        />
-      </div>
-      <div class="col-xs-2">
-        <button
-          [disabled]="zipCodeControl.invalid"
-          class="btn btn-primary"
-          id="addLocationBtn"
-          (click)="submitCode()"
-        >
-          Add location
-        </button>
-      </div>
-    </div>
-    <div class="row">
-      <div
-        *ngIf="zipCodeControl.invalid && zipCodeControl.dirty"
-        class="col-xs-12 alert"
-      >
-        Only US zip codes allowed, please enter a valid 5 digit code.
-      </div>
-    </div>
-  </div>
-  <div *ngIf="enteredZipCodes">
-    <div class="well flex">
-      <div>
-        <h3>Rancho Cordova (95742)</h3>
-        <h4>Current conditions: Clouds</h4>
-        <h4>Temperatures today:</h4>
-        <p>Current 58 - Max 65 - Min 48</p>
-        <p>
-          <a href="/forecast/95742">Show 5-day forecast for Rancho Cordova</a>
-        </p>
-      </div>
-      <div>
-        <span class="close">×</span>
-        <img src="https://www.angulartraining.com/images/weather/sun.png" />
-      </div>
-    </div>
-  </div>
+  <app-zip-code></app-zip-code>
+  <app-zip-code-weather></app-zip-code-weather>
 </div>
