--- a/src/app/components/main/zip-code-weather/zip-code-weather.component.html
+++ b/src/app/components/main/zip-code-weather/zip-code-weather.component.html
@@ -1,17 +1,33 @@
-<div *ngIf="zipCodes">
-  <div class="well flex">
-    <div>
-      <h3>Rancho Cordova (95742)</h3>
-      <h4>Current conditions: Clouds</h4>
-      <h4>Temperatures today:</h4>
-      <p>Current 58 - Max 65 - Min 48</p>
-      <p>
-        <a href="/forecast/95742">Show 5-day forecast for Rancho Cordova</a>
-      </p>
+<div *ngIf="weathers?.length">
+  <ng-container *ngFor="let weather of weathers">
+    <div class="well flex" *ngIf="!weather.message; else noInfo">
+      <div>
+        <h3>{{ weather.name }} ({{ weather.zipCode }})</h3>
+        <h4>Current conditions: {{ weather.weather[0].main }}</h4>
+        <h4>Temperatures today:</h4>
+        <p>
+          Current {{ weather.main.temp | number: '1.0-0' }}°C - Max
+          {{ weather.main.temp_max | number: '1.0-0' }}°C - Min
+          {{ weather.main.temp_min | number: '1.0-0' }}°C
+        </p>
+        <p>
+          <a href="/forecast/95742"
+            >Show 5-day forecast for {{ weather.name }}</a
+          >
+        </p>
+      </div>
+      <div>
+        <span class="close">×</span>
+        <img [src]="retrieveIcon(weather.weather[0].icon)" />
+      </div>
     </div>
-    <div>
-      <span class="close">×</span>
-      <img src="https://www.angulartraining.com/images/weather/sun.png" />
-    </div>
-  </div>
+    <ng-template #noInfo>
+      <div class="well flex">
+        <h3>
+          {{ weather.message }} ({{ weather.zipCode }}), please check the zip
+          code is valid.
+        </h3>
+      </div>
+    </ng-template>
+  </ng-container>
 </div>
