add new logic for step 3

--- a/src/app/components/main/zip-code-weather/zip-code-weather.component.html
+++ b/src/app/components/main/zip-code-weather/zip-code-weather.component.html
@@ -11,7 +11,7 @@
           {{ weather.main.temp_min | number: '1.0-0' }}°C
         </p>
         <p>
-          <a href="/forecast/95742"
+          <a [routerLink]="'/forecast/' + weather.zipCode"
             >Show 5-day forecast for {{ weather.name }}</a
           >
         </p>
