add missing logic for step-3

--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -7,17 +7,20 @@
       </div>
       <ul class="list-group">
         <!---->
-        <li class="list-group-item">
-          Monday, Mar 23: Rain - Min: 45 - Max: 59
+        <li class="list-group-item" *ngFor="let day of forecast.list">
+          {{ day.dt_txt | date: 'EEEE, MMM d h:mm a' }}:
+          {{ day.weather[0].main }} - Min:
+          {{ day.main.temp_min | number: '1.0-0' }}°C - Max:
+          {{ day.main.temp_max | number: '1.0-0' }}°C
 
-          <img
-            class="icon"
-            src="https://www.angulartraining.com/images/weather/rain.png"
-          />
+          <img class="icon" [src]="retrieveIcon(day.weather[0].icon)" />
         </li>
       </ul>
     </div>
   </ng-template>
+  <div class="error" *ngIf="dataError">
+    <p>{{ dataError }}</p>
+  </div>
   <button class="btn btn-success" tabindex="0" id="mainPageBtn" routerLink="/">
     &lt; Back to main page
   </button>
