--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="loader" *ngIf="!forecast; else forecastDetails">Loading</div>
+  <div class="loader" *ngIf="!forecast; else forecastDetails">Loading...</div>
   <ng-template #forecastDetails>
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -8,10 +8,9 @@
       <ul class="list-group">
         <!---->
         <li class="list-group-item" *ngFor="let day of forecast.list">
-          {{ day.dt_txt | date: 'EEEE, MMM d h:mm a' }}:
-          {{ day.weather[0].main }} - Min:
-          {{ day.main.temp_min | number: '1.0-0' }}°C - Max:
-          {{ day.main.temp_max | number: '1.0-0' }}°C
+          {{ day.dt * 1000 | date: 'EEEE, MMM d' }}: {{ day.weather[0].main }} -
+          Min: {{ day.temp.min | number: '1.0-0' }}°C - Max:
+          {{ day.temp.max | number: '1.0-0' }}°C
 
           <img class="icon" [src]="retrieveIcon(day.weather[0].icon)" />
         </li>
